Archive2/da/7d71c097dc2b12/output
+ clang++ -std=c++11 -stdlib=libc++ -W -Wall -Wextra -pedantic-errors -O3 main.cpp -lsupc++
main.cpp:70:5: error: use of undeclared identifier 'mm'
    mm
    ^
1 error generated.
